[package]
name = "tower-sesh-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "=0.5.1"
dashmap = "=6.1.0"
divan = "=0.1.17"
rmp-serde = "=1.3.0"
scc = "=2.3.3"
serde = { version = "=1.0.218", features = ["derive"] }
serde_json = "=1.0.139"

[[bench]]
name = "record"
path = "src/record.rs"
harness = false
